--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
     flex-direction: column;
     gap: .25rem;
     padding: .5rem;
-    border-radius: .5rem;
+    border-radius: .5rem 0 0 .5rem;
     contain: content;
     border: 1px solid rgba(100, 100, 100, 0.5);
 }
@@ -83,6 +83,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: right;
+    cursor: none;
 }
 
 .upper_value {
@@ -91,8 +92,10 @@ body {
 }
 
 .main_value {
-    font-size: 2.5rem;
+    font-size: xx-large;
     padding: .5rem;
+    height: 4rem;
+    contain: content;
 }
 
 .buttons {
@@ -151,3 +154,64 @@ body {
 .equal_button:hover {
     background-color: rgba(144, 238, 144, 0.513);
 }
+
+.spa_basic {
+    display: grid;
+    grid-template-columns: 4fr 1fr; 
+}
+
+.calculator_wrapper_extension {
+    display: grid;
+    grid-template-columns: 0fr .5fr;
+}
+
+.external_controls {
+    display: none;
+    grid-template-rows: 1fr 1fr;
+    border-top: 1px solid rgba(100, 100, 100, 0.5);
+    border-bottom: 1px solid rgba(100, 100, 100, 0.5);
+}
+
+.switch, .reset {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.switch {
+    border-bottom: 1px solid rgba(100, 100, 100, 0.5);
+}
+
+.extend_button {
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    padding: .5rem;
+    cursor: pointer;
+    border-radius: 0 .5rem .5rem 0;
+    background-color: rgba(71, 71, 71, 0.5);
+    border: 1px solid rgba(100, 100, 100, 0.5);
+    border-left: none;
+}
+
+.expand {
+    transform: rotate(0deg);
+    transition: transform 500ms ease;
+}
+
+.contrast {
+    transform: rotate(180deg);
+    transition: transform 500ms ease;
+}
+
+.off {
+    color: lightgreen;
+}
+
+.on {
+    color: lightcoral;
+}
+
